--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       dockerfile: Dockerfile
     command: python /code/manage.py runserver 0.0.0.0:80
     volumes:
-      - .:/code
+      - .:/app
     ports:
       - "80:80"
     depends_on:
