--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: python /code/manage.py runserver 0.0.0.0:80
+    command: python manage.py runserver 0.0.0.0:80
     volumes:
       - .:/app
     ports:
