--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-cors-headers==4.2.0
 djangorestframework==3.14.0
 drf-nested-routers==0.93.4
 drf-yasg==1.21.6
+firebase-admin==6.3.0
 frozenlist==1.4.0
 gitdb==4.0.11
 GitPython==3.1.40
