--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   db:
-    image: postgres:15.5
+    image: postgres
     restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
