--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: python manage.py runserver 0.0.0.0:80
+    command: bash -c "python manage.py runserver 0.0.0.0:80 & python -m telegram_bot.main --port 8000"
     volumes:
       - .:/app
     ports:
       - "8080:80"
+      - "8000:8000"
     depends_on:
       - db
     restart: unless-stopped
+
